--- a/src/com/ats/gui/panel/SettingsForm.mxml
+++ b/src/com/ats/gui/panel/SettingsForm.mxml
@@ -145,6 +145,10 @@
 			public function get description():String {
 				return msDescription.text
 			}
+
+			public function get developmentTeamId():String {
+				return teamIdInputText.text
+			}
 			
 			/*protected function loadPythonPath_clickHandler(event:MouseEvent):void {
 				var directory:File = Settings.defaultAppFolder;
@@ -172,6 +176,10 @@
 			{
 				navigateToURL(new URLRequest("https://www.python.org/downloads/"));
 			}
+
+			protected function apple_dev_button_clickHandler(event:MouseEvent):void {
+				navigateToURL(new URLRequest("https://developer.apple.com/account/"));
+			}
 			
 			protected function amsDownload_clickHandler(event:MouseEvent):void
 			{
@@ -187,35 +195,36 @@
 	<text:InputText id="msName" label="Mobile Station name" width="100%"/>
 	<text:InputText id="msDescription" label="Description" width="100%" lines="4"/>
 	<s:Spacer height="6"/>
-	<s:HGroup width="100%" verticalAlign="bottom">
+	<s:HGroup width="100%" verticalAlign="bottom" includeInLayout="{!Settings.isMacOs}">
 		<text:InputText id="pythonFolderPath" label="Python folder" width="100%" editable="false"/>
 		<!--<buttons:SmallButton click="loadPythonPath_clickHandler(event)"/>-->
 	</s:HGroup>
 	<s:Spacer height="6"/>
-	<s:Group width="100%">
-		<panels:InsetPanel id="genyPanel" label="Genymotion Cloud" width="100%" height="100%"/>
-		<s:HGroup width="100%" top="26" paddingLeft="7" paddingRight="5" paddingBottom="5" horizontalAlign="center">
-			<buttons:SmallButton id="gmsaasInstallButton" label="Install components" click="installGmsaas(event)" fontSize="12"/>
+	<s:Group width="100%"  includeInLayout="{!Settings.isMacOs}">
+		<panels:InsetPanel id="genyPanel" label="Genymotion Cloud" width="100%" height="100%" includeInLayout="{!Settings.isMacOs}"/>
+		<s:HGroup width="100%" top="26" paddingLeft="7" paddingRight="5" paddingBottom="5" horizontalAlign="center" includeInLayout="{!Settings.isMacOs}">
+			<buttons:SmallButton id="gmsaasInstallButton" label="Install components" click="installGmsaas(event)" fontSize="12" includeInLayout="{!Settings.isMacOs}"/>
 			<buttons:SmallButton id="gmsaasCredentialsButton" label="Set credentials" click="editCredentials(event)" fontSize="12"/>
 			<buttons:SmallButton id="gmsaasUninstallButton" label="Uninstall" click="prepareGmsaasUninstall(event)" fontSize="12"/>
 		</s:HGroup>
 	</s:Group>
 	<s:Spacer height="14"/>
-<!--	<text:InputText label="Apple development team ID" width="100%" enabled="false"/>
-	<mx:LinkButton width="100%" label="Apple Developer account" fontStyle="normal" fontSize="14"
-				   textAlign="left" color="0xadb5bd" enabled="false"/>-->
-	
+	<text:InputText label="Apple development team ID" width="100%"  id="teamIdInputText" text="{FlexGlobals.topLevelApplication.teamId}" includeInLayout="{Settings.isMacOs}"/>
+	<s:Spacer height="8" includeInLayout="{Settings.isMacOs}"/>
+
 	<s:VGroup color="#adb5bd" gap="4">
 		<s:Label text="Useful links" fontWeight="bold"/>
 		<s:Spacer height="2"/>
 		<mx:LinkButton width="100%" paddingLeft="5" label="ATS MobileStation configuration" fontStyle="normal" fontSize="14"
 					   textAlign="left" click="linkAts_clickHandler(event)"/>
 		<mx:LinkButton width="100%" paddingLeft="5" label="Genymotion Android simulators" fontStyle="normal" fontSize="14"
-					   textAlign="left" click="linkGeny_clickHandler(event)"/>
+					   textAlign="left" click="linkGeny_clickHandler(event)" includeInLayout="{!Settings.isMacOs}"/>
 		<mx:LinkButton width="100%" paddingLeft="5" label="Python download page" fontStyle="normal" fontSize="14"
-					   textAlign="left" click="python_clickHandler(event)"/>
+					   textAlign="left" click="python_clickHandler(event)" includeInLayout="{!Settings.isMacOs}"/>
 		<mx:LinkButton width="100%" paddingLeft="5" label="Download latest version of MobileStation" fontStyle="normal" fontSize="14"
 					   textAlign="left" click="amsDownload_clickHandler(event)"/>
+		<mx:LinkButton width="100%" label="Apple Developer account" fontStyle="normal" fontSize="14"
+					   textAlign="left" color="0xadb5bd" includeInLayout="{Settings.isMacOs}" click="apple_dev_button_clickHandler(event)"/>
 	</s:VGroup>
 
 
