Fix get ip address at start

--- a/src/AtsMobileStation.mxml
+++ b/src/AtsMobileStation.mxml
@@ -197,23 +197,27 @@
 				python.install();
 			}
 
-			var networkUtils:NetworkUtils = new NetworkUtils()
+			networkUtils = new NetworkUtils()
 			networkUtils.addEventListener(NetworkEvent.IP_ADDRESS_FOUND, onIpAddressFound, false, 0, true)
 			networkUtils.addEventListener(NetworkEvent.IP_ADDRESS_NOT_FOUND, onIpAddressNotFound, false, 0, true)
 			networkUtils.getClientIPAddress()
 		}
 
-		private function onIpAddressFound(event:NetworkEvent):void {
-			(event.currentTarget as NetworkUtils).removeEventListener(NetworkEvent.IP_ADDRESS_FOUND, onIpAddressFound)
-			(event.currentTarget as NetworkUtils).removeEventListener(NetworkEvent.IP_ADDRESS_NOT_FOUND, onIpAddressFound)
+		var networkUtils:NetworkUtils
 
+		private function onIpAddressFound(event:NetworkEvent):void {
+			networkUtils.removeEventListener(NetworkEvent.IP_ADDRESS_FOUND, onIpAddressFound)
+			networkUtils.removeEventListener(NetworkEvent.IP_ADDRESS_NOT_FOUND, onIpAddressNotFound)
+			networkUtils = null
+			
 			var ipAddress:String = event.ipAddress
 			titleLabel.text = "Ats MobileStation (" + appVersion + ") - " + ipAddress + ":" + httpPort;
 		}
 
 		private function onIpAddressNotFound(event:NetworkEvent):void {
-			(event.currentTarget as NetworkUtils).removeEventListener(NetworkEvent.IP_ADDRESS_FOUND, onIpAddressFound)
-			(event.currentTarget as NetworkUtils).removeEventListener(NetworkEvent.IP_ADDRESS_NOT_FOUND, onIpAddressFound)
+			networkUtils.removeEventListener(NetworkEvent.IP_ADDRESS_FOUND, onIpAddressFound)
+			networkUtils.removeEventListener(NetworkEvent.IP_ADDRESS_NOT_FOUND, onIpAddressNotFound)
+			networkUtils = null
 
 			titleLabel.text = "Ats MobileStation (" + appVersion + ") - port:" + httpPort;
 		}
