--- a/src/com/ats/gui/panel/SettingsForm.mxml
+++ b/src/com/ats/gui/panel/SettingsForm.mxml
@@ -7,197 +7,186 @@
 	
 	<fx:Script>
 		<![CDATA[
-			import com.ats.gui.alert.CredentialsAlert;
-			import com.ats.helpers.Settings;
-			import com.ats.managers.GenymotionManager;
-			import com.ats.managers.gmsaas.GmsaasInstaller;
-			import com.ats.managers.gmsaas.GmsaasInstallerErrorEvent;
-			import com.ats.managers.gmsaas.GmsaasInstallerProgressEvent;
-			import com.ats.managers.gmsaas.GmsaasProcess;
-			import com.ats.tools.PeerGroupConnection;
-			import com.ats.tools.Python;
+		import com.ats.gui.alert.CredentialsAlert;
+		import com.ats.helpers.Settings;
+		import com.ats.managers.GenymotionManager;
+		import com.ats.managers.gmsaas.GmsaasInstaller;
+		import com.ats.managers.gmsaas.GmsaasInstallerErrorEvent;
+		import com.ats.managers.gmsaas.GmsaasInstallerProgressEvent;
+		import com.ats.managers.gmsaas.GmsaasProcess;
+		import com.ats.tools.PeerGroupConnection;
+		import com.ats.tools.Python;
 
-			import mx.core.FlexGlobals;
-			import mx.events.CloseEvent;
+		import mx.core.FlexGlobals;
+		import mx.events.CloseEvent;
 
-			import spark.components.Alert;
-			
-			[Bindable]
-			public var edit:Boolean = false;
-			
-			public function reload(peer:PeerGroupConnection):void {
-				msName.text = peer.name;
-				msDescription.text = peer.description;
-				
-				pythonFolderPath.text = Python.folder.nativePath
-				genyPanel.clearMessage()
-					
-				gmsaas = GmsaasProcess.gmsaasExec != null
-			}
-			
-			private function set gmsaas(value:Boolean):void {
-				gmsaasUninstallButton.enabled = value
-				gmsaasInstallButton.enabled = !value
-				gmsaasCredentialsButton.enabled = value
-			}
-			
-			protected function installGmsaas(event:Event):void {
-				genyPanel.infoMessage = "Installing ..."
-				edit = true;
-				
-				var installer:GmsaasInstaller = new GmsaasInstaller()
-				installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-				installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-				installer.install()
-			}
+		import spark.components.Alert;
 
-			protected function prepareGmsaasUninstall(event:Event):void {
-				genyPanel.infoMessage = "Uninstalling ..."
-				edit = true;
+		[Bindable]
+		public var edit:Boolean = false;
 
-				var genymotionManager:GenymotionManager = FlexGlobals.topLevelApplication.genymotionManager
-				genymotionManager.addEventListener(Event.COMPLETE, genymotionTerminated)
-				genymotionManager.terminate()
-			}
+		[Bindable]
+		private var peerConnection:PeerGroupConnection
 
-			private function genymotionTerminated(event:Event):void {
-				(event.currentTarget as GenymotionManager).removeEventListener(Event.COMPLETE, genymotionTerminated)
+		public function reload(peer:PeerGroupConnection):void {
+			this.peerConnection = peer
 
-				var installer:GmsaasInstaller = new GmsaasInstaller()
-				installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-				installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-				installer.uninstall()
-			}
-			
-			private function installerErrorHandler(event:GmsaasInstallerErrorEvent):void {
-				var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
-				installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-				installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-				
-				genyPanel.infoMessage = event.error.message
-				edit = false;
-			}
-			
-			private function installerProgressHandler(event:GmsaasInstallerProgressEvent):void {
-				var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
-				genyPanel.infoMessage = event.state
-					
-				switch (event.state) {
-					case GmsaasInstaller.GMSAAS_INSTALLER_STATE_INSTALL_COMPLETED:
-						installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-						installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-						
-						installCredentials();					
-						
-						break;
-					case GmsaasInstaller.GMSAAS_INSTALLER_STATE_UNINSTALL_COMPLETED:
-						installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
-						installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
-						
-						genyPanel.infoMessage = ""
-						gmsaas = false
-						FlexGlobals.topLevelApplication.genymotionActivated = false
-						
-						edit = false;
-						break
-				}
-			}
-			
-			private function installCredentials():void{
-				const credentialsAlert:CredentialsAlert = new CredentialsAlert();
-				credentialsAlert.addEventListener(CloseEvent.CLOSE, installCredentialsHandler, false, 0, true);
-				ModalPopupManager.addPopup(this, credentialsAlert);
-			}
-			
-			private function installCredentialsHandler(ev:CloseEvent):void{
-				ev.currentTarget.removeEventListener(CloseEvent.CLOSE, installCredentialsHandler);
-				ModalPopupManager.removePopup(ev.currentTarget as CredentialsAlert);
-				edit = false;
-				
-				if(ev.detail == Alert.YES){
-					gmsaas = true
-					FlexGlobals.topLevelApplication.genymotionActivated = true;
-				}else{
-					new GmsaasInstaller().uninstall();
-					genyPanel.infoMessage = "Install aborted !"
-				}
-			}
-			
-			protected function editCredentials(event:Event):void {
-				
-				edit = true;
-				
-				const credentialsAlert:CredentialsAlert = new CredentialsAlert();
-				credentialsAlert.addEventListener(CloseEvent.CLOSE, credentialsCompleteHandler, false, 0, true);
-				
-				ModalPopupManager.addPopup(this, credentialsAlert);
-			}
-			
-			private function credentialsCompleteHandler(ev:CloseEvent):void {
-				edit = false
-				ModalPopupManager.removePopup(ev.currentTarget as CredentialsAlert);
-			}
-			
-			public function get localName():String {
-				return msName.text
-			}
-			
-			public function get description():String {
-				return msDescription.text
-			}
+			msName.text = peer.name;
 
-			public function get developmentTeamId():String {
-				return teamIdInputText.text
-			}
-			
-			/*protected function loadPythonPath_clickHandler(event:MouseEvent):void {
-				var directory:File = Settings.defaultAppFolder;
-				directory.addEventListener(Event.SELECT, pythonFolderSelected);
-				directory.browseForDirectory("Select Python directory");
-			}*/
-			
-			/*protected function pythonFolderSelected(event:Event):void {
-				event.currentTarget.removeEventListener(Event.SELECT, pythonFolderSelected);
-				Settings.getInstance().pythonFolder = event.target as File
-				pythonFolderPath.text = Settings.getInstance().pythonPath
-			}*/
-			
-			protected function linkAts_clickHandler(event:MouseEvent):void
-			{
-				navigateToURL(new URLRequest("https://github.com/pierrehub2b/AtsMobileStation#ios-devices"));
-			}
-			
-			protected function linkGeny_clickHandler(event:MouseEvent):void
-			{
-				navigateToURL(new URLRequest("https://www.genymotion.com/"));
-			}
-			
-			protected function python_clickHandler(event:MouseEvent):void
-			{
-				navigateToURL(new URLRequest("https://www.python.org/downloads/"));
-			}
+			pythonFolderPath.text = Python.folder.nativePath
+			genyPanel.clearMessage()
 
-			protected function apple_dev_button_clickHandler(event:MouseEvent):void {
-				navigateToURL(new URLRequest("https://developer.apple.com/account/"));
+			connectedClientsList.dataProvider = peerConnection.clients
+
+			gmsaas = GmsaasProcess.gmsaasExec != null
+		}
+
+		private function set gmsaas(value:Boolean):void {
+			gmsaasUninstallButton.enabled = value
+			gmsaasInstallButton.enabled = !value
+			gmsaasCredentialsButton.enabled = value
+		}
+
+		protected function installGmsaas(event:Event):void {
+			genyPanel.infoMessage = "Installing ..."
+			edit = true;
+
+			var installer:GmsaasInstaller = new GmsaasInstaller()
+			installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+			installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+			installer.install()
+		}
+
+		protected function prepareGmsaasUninstall(event:Event):void {
+			genyPanel.infoMessage = "Uninstalling ..."
+			edit = true;
+
+			var genymotionManager:GenymotionManager = FlexGlobals.topLevelApplication.genymotionManager
+			genymotionManager.addEventListener(Event.COMPLETE, genymotionTerminated)
+			genymotionManager.terminate()
+		}
+
+		private function genymotionTerminated(event:Event):void {
+			(event.currentTarget as GenymotionManager).removeEventListener(Event.COMPLETE, genymotionTerminated)
+
+			var installer:GmsaasInstaller = new GmsaasInstaller()
+			installer.addEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+			installer.addEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+			installer.uninstall()
+		}
+
+		private function installerErrorHandler(event:GmsaasInstallerErrorEvent):void {
+			var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
+			installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+			installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+
+			genyPanel.infoMessage = event.error.message
+			edit = false;
+		}
+
+		private function installerProgressHandler(event:GmsaasInstallerProgressEvent):void {
+			var installer:GmsaasInstaller = event.currentTarget as GmsaasInstaller
+			genyPanel.infoMessage = event.state
+
+			switch (event.state) {
+				case GmsaasInstaller.GMSAAS_INSTALLER_STATE_INSTALL_COMPLETED:
+					installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+					installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+
+					installCredentials();
+
+					break;
+				case GmsaasInstaller.GMSAAS_INSTALLER_STATE_UNINSTALL_COMPLETED:
+					installer.removeEventListener(GmsaasInstallerErrorEvent.ERROR, installerErrorHandler);
+					installer.removeEventListener(GmsaasInstallerProgressEvent.PROGRESS, installerProgressHandler);
+
+					genyPanel.infoMessage = ""
+					gmsaas = false
+					FlexGlobals.topLevelApplication.genymotionActivated = false
+
+					edit = false;
+					break
 			}
-			
-			protected function amsDownload_clickHandler(event:MouseEvent):void
-			{
-				if(Settings.isMacOs){
-					navigateToURL(new URLRequest("http://www.actiontestscript.com/drivers/mobile/macos/AtsMobileStation.zip"));
-				}else{
-					navigateToURL(new URLRequest("http://www.actiontestscript.com/drivers/mobile/windows/AtsMobileStation.zip"));
-				}
+		}
+
+		private function installCredentials():void {
+			const credentialsAlert:CredentialsAlert = new CredentialsAlert();
+			credentialsAlert.addEventListener(CloseEvent.CLOSE, installCredentialsHandler, false, 0, true);
+			ModalPopupManager.addPopup(this, credentialsAlert);
+		}
+
+		private function installCredentialsHandler(ev:CloseEvent):void {
+			ev.currentTarget.removeEventListener(CloseEvent.CLOSE, installCredentialsHandler);
+			ModalPopupManager.removePopup(ev.currentTarget as CredentialsAlert);
+			edit = false;
+
+			if (ev.detail == Alert.YES) {
+				gmsaas = true
+				FlexGlobals.topLevelApplication.genymotionActivated = true;
+			} else {
+				new GmsaasInstaller().uninstall();
+				genyPanel.infoMessage = "Install aborted !"
 			}
-			
+		}
+
+		protected function editCredentials(event:Event):void {
+
+			edit = true;
+
+			const credentialsAlert:CredentialsAlert = new CredentialsAlert();
+			credentialsAlert.addEventListener(CloseEvent.CLOSE, credentialsCompleteHandler, false, 0, true);
+
+			ModalPopupManager.addPopup(this, credentialsAlert);
+		}
+
+		private function credentialsCompleteHandler(ev:CloseEvent):void {
+			edit = false
+			ModalPopupManager.removePopup(ev.currentTarget as CredentialsAlert);
+		}
+
+		public function get localName():String {
+			return msName.text
+		}
+
+		public function get developmentTeamId():String {
+			return teamIdInputText.text
+		}
+
+		protected function linkAts_clickHandler(event:MouseEvent):void {
+			navigateToURL(new URLRequest("https://github.com/pierrehub2b/AtsMobileStation#ios-devices"));
+		}
+
+		protected function linkGeny_clickHandler(event:MouseEvent):void {
+			navigateToURL(new URLRequest("https://www.genymotion.com/"));
+		}
+
+		protected function python_clickHandler(event:MouseEvent):void {
+			navigateToURL(new URLRequest("https://www.python.org/downloads/"));
+		}
+
+		protected function apple_dev_button_clickHandler(event:MouseEvent):void {
+			navigateToURL(new URLRequest("https://developer.apple.com/account/"));
+		}
+
+		protected function amsDownload_clickHandler(event:MouseEvent):void {
+			if (Settings.isMacOs) {
+				navigateToURL(new URLRequest("http://www.actiontestscript.com/drivers/mobile/macos/AtsMobileStation.zip"));
+			} else {
+				navigateToURL(new URLRequest("http://www.actiontestscript.com/drivers/mobile/windows/AtsMobileStation.zip"));
+			}
+		}
 		]]>
 	</fx:Script>
 	<text:InputText id="msName" label="Mobile Station name" width="100%"/>
-	<text:InputText id="msDescription" label="Description" width="100%" lines="4"/>
+	<s:Group width="100%" height="100%" includeInLayout="{!Settings.isMacOs}">
+		<panels:InsetPanel id="connectedClientsPanel" label="{'Connected clients (' + peerConnection.clients.length + ')'}" width="100%" height="100%" includeInLayout="true"/>
+		<s:Spacer height="10" />
+		<s:List right="7" left="7" top="26" id="connectedClientsList" width="100%" height="100%" itemRenderer="com.ats.gui.renderer.EditorRenderer"
+				useVirtualLayout="false" contentBackgroundAlpha="0" borderAlpha="0"/>
+	</s:Group>
 	<s:Spacer height="6"/>
 	<s:HGroup width="100%" verticalAlign="bottom" includeInLayout="{!Settings.isMacOs}">
 		<text:InputText id="pythonFolderPath" label="Python folder" width="100%" editable="false"/>
-		<!--<buttons:SmallButton click="loadPythonPath_clickHandler(event)"/>-->
 	</s:HGroup>
 	<s:Spacer height="6"/>
 	<s:Group width="100%"  includeInLayout="{!Settings.isMacOs}">
@@ -226,7 +215,4 @@
 		<mx:LinkButton width="100%" label="Apple Developer account" fontStyle="normal" fontSize="14"
 					   textAlign="left" color="0xadb5bd" includeInLayout="{Settings.isMacOs}" click="apple_dev_button_clickHandler(event)"/>
 	</s:VGroup>
-
-
-
 </s:VGroup>
