--- a/src/com/ats/gui/panel/SettingsForm.mxml
+++ b/src/com/ats/gui/panel/SettingsForm.mxml
@@ -182,7 +182,7 @@
 		<panels:InsetPanel id="connectedClientsPanel" label="{'Connected clients (' + peerConnection.clients.length + ')'}" width="100%" height="100%" includeInLayout="true"/>
 		<s:Spacer height="10" />
 		<s:List right="7" left="7" top="26" id="connectedClientsList" width="100%" height="100%" itemRenderer="com.ats.gui.renderer.EditorRenderer"
-				useVirtualLayout="false" contentBackgroundAlpha="0" borderAlpha="0"/>
+				useVirtualLayout="false" contentBackgroundAlpha="0" borderAlpha="0" dataProvider="{peerConnection.clients}"/>
 	</s:Group>
 	<s:Spacer height="6"/>
 	<s:HGroup width="100%" verticalAlign="bottom" includeInLayout="{!Settings.isMacOs}">
