--- a/src/com/ats/gui/LoadingScreen.mxml
+++ b/src/com/ats/gui/LoadingScreen.mxml
@@ -13,7 +13,7 @@
     <s:VGroup verticalAlign="middle" horizontalAlign="center" width="100%" height="100%">
         <s:Label text="MobileStation" fontWeight="bold" fontSize="18" color="#ffffff" />
         <s:Spacer height="6"/>
-        <s:Label text="Chargement..." fontSize="12" color="#ffffff"/>
+        <s:Label text="Loading..." fontSize="12" color="#ffffff"/>
     </s:VGroup>
 
 </s:Group>
